2009-07-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c: The code was disabling all mousing and mouse events
	during multiplot.  This had the unfortunate side effect that window
	resizing and placement events were never acknowledged.  Also hotkeys
	would not work.  
	Bug #2812476

	* src/gadgets.h src/gadgets.h src/mouse.c (builtin_toggle_border)
	src/set.c:  The 'b' hotkey was a no-op in 2D plots, and lost the current
	user setting for both 2D and 3D plots. Change it to cycle the border
	setting between user / off / full / partial (3D only).

	* src/graphics.c (plot_boxes plot_c_bars do_rectangle do_key_sample):
	Remove the fill_corners() routine and instead call term->fillbox()
	directly rather than dummying up a call to term->filled_polygon().
	Bug #2804784

2009-07-02  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.c: The "size xx,yy" option should have a comma between
	xx and yy for consistency with other terminals.

2009-06-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars): Candlestick boxes that were entirely out
	of range on y were nevertheless appearing as a horizontal line along the
	plot border.  Skip them entirely.  Same thing for whiskerbars.
	Bug #2807571 #2807572

2009-06-21  Thomas Sefzick <thse@users.sourceforge.net>

	* term/gd.trm: The background color requested in "set term png..."
	was not being used in truecolor png output.
	Bugfix

2009-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: Remove the EXPERIMENTAL warning from the configuration
	options for command line macros and for the tikz/lua terminal.

2009-06-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_set_color):  plot .. lc N should take
	only the color from linetype N, not any of the other properties.
	Bugfix  (e.g.  plot sin(x) with lines lt 0 lc 3)

	* time.c (ggmtime): Counting back from 1.e38 by one year at a time takes